# spacetraders-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Makefile  README.md  flake.nix  rust-toolchain
api-docs/: generate.sh
api-docs.bak/: generate.sh
api-docs.bak/custom-rust-template/reqwest/: api.mustache  api_mod.mustache
api-docs/custom-rust-template/reqwest/: api.mustache
api-docs/reference/: SpaceTraders-swagger2.yaml  SpaceTraders.json
spacetraders_sdk/: Cargo.toml  README.md
spacetraders_sdk/.openapi-generator/: FILES
spacetraders_sdk/api/: openapi.yaml
spacetraders_sdk/docs/: AcceptContract200Response.md  AcceptContract200ResponseData.md  Agent.md  Chart.md  ConnectedSystem.md  Contract.md  ContractDeliverGood.md  ContractPayment.md  ContractTerms.md  Cooldown.md  CreateChart201Response.md  CreateChart201ResponseData.md  CreateShipShipScan201Response.md  CreateShipShipScan201ResponseData.md  CreateShipSystemScan201Response.md  CreateShipSystemScan201ResponseData.md  CreateShipWaypointScan201Response.md  CreateShipWaypointScan201ResponseData.md  CreateSurvey201Response.md  CreateSurvey201ResponseData.md  DeliverContract200Response.md  DeliverContract200ResponseData.md  DeliverContractRequest.md  DockShip200Response.md  ExtractResources201Response.md  ExtractResources201ResponseData.md  ExtractResourcesRequest.md  Extraction.md  ExtractionYield.md  Faction.md  FactionTrait.md  FleetApi.md  FulfillContract200Response.md  GetContract200Response.md  GetContracts200Response.md  GetFaction200Response.md  GetFactions200Response.md  GetJumpGate200Response.md  GetMarket200Response.md  GetMyAgent200Response.md  (+96 more)
spacetraders_sdk/examples/client/: main.rs
spacetraders_sdk/examples/server/: main.rs  server.rs
spacetraders_sdk/src/: lib.rs  models.rs
spacetraders_sdk/src/apis/: agents_api.rs  configuration.rs  contracts_api.rs  default_api.rs  factions_api.rs  fleet_api.rs  mod.rs  systems_api.rs
spacetraders_sdk/src/client/: mod.rs
spacetraders_sdk/src/server/: mod.rs
src/: api.rs  api2.rs  api_models.rs  client.rs  errors.rs  lib.rs  main.bak  main.rs  requests.rs  responses.rs  shared.rs
tests/: responses.rs
