[package]
name = "spacetraders"
version = "0.1.0-alpha.6"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"
license-file = "LICENSE.md"
readme = "README.md"
keywords = ["spacetraders"]
categories = ["api-bindings"]
description = "An API wrapper for https://spacetraders.io"
homepage = "https://github.com/bloveless/spacetraders-rs"
repository = "https://github.com/bloveless/spacetraders-rs"
documentation = "https://docs.rs/spacetraders"

[lib]
name = "spacetraders"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = [ "serde", "alloc" ] }
log = "0.4.14"
