[package]
name = "spacetraders-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
reqwest = { version = "0.11.16", features = ["json", "multipart"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
uuid = { version = "1.3.1", features = ["serde"] }
spacetraders_sdk= { path = "./spacetraders_sdk", features = ["client"] }
